apply clean code and update swagger anotations
