# controllers/stock_rating_controller.go
@@ -4,75 +4,69 @@ import (
 	"example/hello/services"
 	"example/hello/utils"
 	"net/http"
-
 	"github.com/gin-gonic/gin"
 )
 
-type StockRatingController struct {
+type StockController struct {
 	Serv *services.StockService
 }
 
-func NewStockRatingController(serv *services.StockService)*StockRatingController{
-	return &StockRatingController{Serv: serv}
+func NewStockController(serv *services.StockService)*StockController{
+	return &StockController{Serv: serv}
 }
-	
-// swagger:route GET /stock stock GetStock
-//
-//GetStock returns all stock
-//
+
+// swagger:route GET /stock stock getStocks
+//GetStocks returns all stock
 //responses:
-//
 //	200: Response
-func (c *StockRatingController) GetAll(ctx *gin.Context){
+//  400: Response
+//  500: Response
+func (c *StockController) GetAll(ctx *gin.Context){
 	var response utils.Response=c.Serv.GetAll(ctx)
 	ctx.IndentedJSON(http.StatusOK, response)
 }
 
-// swagger:route GET /stock/{id} stock id
-//
+// swagger:route GET /stock/{id} stock getStock
 //GetOneStock returns one from the stock
-//
 //responses:
-//
 //	200: Response
-func (c *StockRatingController) GetOne(ctx *gin.Context){
+//  400: Response
+//  500: Response
+func (c *StockController) GetOne(ctx *gin.Context){
 	var response utils.Response=c.Serv.GetOne(ctx)
 	ctx.IndentedJSON(http.StatusOK, response)
 }
 
 // swagger:route POST /stock stock createStock
-//
-//CreateStock returns message
-//
+//CreateStock returns a success message
 //responses:
-//
-//	200: Response
-func (c *StockRatingController) Post(ctx *gin.Context){
-	response:=c.Serv.Create(ctx)
+//	202: Response
+//  400: Response
+//  500: Response
+func (c *StockController) Create(ctx *gin.Context){
+	var response utils.Response=*c.Serv.Create(ctx)
 	ctx.IndentedJSON(http.StatusOK,response)
 }
 
 // swagger:route PUT /stock/{id} stock updateStock
-//
-//updateStock returns message
-//
+//updateStock returns a success message
 //responses:
-//
 //	200: Response
-func (c *StockRatingController) Put(ctx *gin.Context){
-	response:=c.Serv.Update(ctx)
+//  400: Response
+//  500: Response
+func (c *StockController) Update(ctx *gin.Context){
+	var response utils.Response=*c.Serv.Update(ctx)
 	ctx.IndentedJSON(http.StatusOK,response)
 }
 
-// swagger:route DELETE /stock/{id} stock id
-//
+// swagger:route DELETE /stock/{id} stock deleteStock
 //Delete returns message
-//
 //responses:
-//
 //	200: Response
-func (c *StockRatingController) Delete(ctx *gin.Context){
-	response:=c.Serv.Delete(ctx)
+//  400: Response
+//  500: Response
+func (c *StockController) Delete(ctx *gin.Context){
+	var response utils.Response=*c.Serv.Delete(ctx)
 	ctx.IndentedJSON(http.StatusOK,response)
 
 }
